--- a/k8s/gateway-deployment.yaml
+++ b/k8s/gateway-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: gateway-service
-          image: gateway-service:latest
+          image: deepsjain271/gateway-service:latest
           ports:
             - containerPort: 3003
           env:
