--- a/k8s/order-deployment.yaml
+++ b/k8s/order-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: order-service
-          image: order-service:latest
+          image: deepsjain271/order-service:latest
           ports:
             - containerPort: 3002
           env:
