--- a/k8s/product-deployment.yaml
+++ b/k8s/product-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: product-service
-          image: product-service:latest
+          image: deepsjain271/product-service:latest
           ports:
             - containerPort: 3001
           env:
